# ell

./: .gitignore  00 Done.md  00 Plans.md  00 Todo.md  Summary.base
.obsidian/: app.json  appearance.json  bookmarks.json  canvas.json  community-plugins.json  core-plugins.json  daily-notes.json  graph.json  hotkeys.json  types.json  webviewer.json  workspace.json  workspaces.json
00 diaries/: 2023-10-28-星期六.md  2023-10-29-星期日.md  2023-10-30-星期一.md  2023-11-11-星期六.md  2024-03-22-星期五.md  2024-06-26-星期三.md  2024-06-27-星期四.md  2024-06-29-星期六.md  2024-12-18-星期三.md  2025-01-10-星期五.md  2025-01-12-星期日.md  2025-01-14-星期二.md  2025-01-15-星期三.md  2025-03-15-星期六.md
00 templates/: CHANGELOG模板.md  YAML模板-项目.md
Clippings/: Density functional theory - Photosynthesis Research.md  EWW Powermenu.md  Introduction to Density Functional Theory Calculations by Hand on the Helium Atom.md  Linux Backup and Sync Made Easy with Syncovery.md  (+1 more)
Computer/07 C and C++/CMake/Codes/program2_detect/: CMakeLists.txt  main.cpp
Computer/07 C and C++/CMake/Codes/program2_detect/detectfunc/: CMakeLists.txt
Computer/07 C and C++/CMake/Codes/program2_detect/detectfunc/include/: detectfunc.h
Computer/07 C and C++/CMake/Codes/program2_detect/detectfunc/src/: detectfunc.cpp
Computer/07 C and C++/CMake/Codes/program2_detect/mathfunc/: CMakeLists.txt
Computer/07 C and C++/CMake/Codes/program2_detect/mathfunc/include/: mathfunc.h
Computer/07 C and C++/CMake/Codes/program2_detect/mathfunc/src/: mathfunc.cpp
HomePage/: HOME.md  HOME.sync-conflict-20250406-232146-5ZKM3EL.md
Project/: Summary.md
(+621 files in other folders)
